# kamisolver

./: .gitignore  .gitmodules  A9.txt  D7-5.txt  D7.txt  E9-7.txt  kamisolver.coffee  solutions.txt
c/: CMakeLists.txt  main.c
coffeescript/: kamisolver.coffee
cpp/: CMakeLists.txt  Node.cpp  Node.h  Puzzle.cpp  Puzzle.h  Solver.cpp  Solver.h  main.cpp
data/: B6-4.txt  B7-4.txt  P11-6.txt  P19-7.txt
data/levels/: A1-1.txt  A2-1.txt  A3-2.txt  A4-3.txt  A5-5.txt  A6-3.txt  A7-4.txt  A8-4.txt  A9-4.txt  B1-3.txt  B2-3.txt  B3-4.txt  B4-3.txt  B5-3.txt  B8-7.txt  B9-7.txt  C1-3.txt  C2-3.txt  C3-4.txt  C4-4.txt  C5-4.txt  C6-3.txt  C7-5.txt  C8-5.txt  C9-5.txt  D1-4.txt  D2-6.txt  D3-5.txt  D4-5.txt  D5-5.txt  D6-5.txt  D8-6.txt  D9-8.txt  E1-3.txt  E2-5.txt  E3-5.txt  E4-4.txt  E5-5.txt  E6-6.txt  E7-8.txt  (+28 more)
data/solutions/: solution-A2-1.txt  solution-A3-2.txt  solution-A4-3.txt  solution-A5-5.txt  solution-A6-3.txt  solution-A7-4.txt  solution-A8-4.txt  solution-A9-4.txt  solution-B1-3.txt  solution-B2-3.txt  solution-B3-4.txt  solution-B4-3.txt  solution-B5-3.txt  solution-B6-4.txt  solution-B7-4.txt  solution-B8-7.txt  solution-B9-7.txt  solution-C1-3.txt  solution-C2-3.txt  solution-C3-4.txt  solution-C4-4.txt  solution-C5-4.txt  solution-C6-3.txt  solution-C7-5.txt  solution-C8-5.txt  solution-C9-5.txt  solution-D1-4.txt  solution-D2-6.txt  solution-D3-5.txt  solution-D4-5.txt  solution-D5-5.txt  solution-D6-5.txt  solution-D7-5.txt  solution-D8-6.txt  solution-D9-8.txt  solution-E1-3.txt  solution-E2-5.txt  solution-E3-5.txt  solution-E4-4.txt  (+22 more)
